# forecasting_the_future

./: .gitignore  README.md  requirements.txt
Notebooks/: NB01_Extract_Data.ipynb  NB01_Practice_EDA.ipynb  NB02_Extract_and_Clean_Data.ipynb  NB03_EDA.Rmd  NB04_Basic_Growth_Model.Rmd  NB04_Basic_Growth_Model.ipynb  NB05_Inflation_Model.ipynb
docs/: dag.qmd  references.docx
src/: pyproject.toml
src/macro_utils/: functions.py  sql_queries.R  sql_queries.py
src/scripts/: nb04.py
